syntax = "proto3";

package echo;

option java_multiple_files = true;
option java_package = "io.proj.ktprojstarter.echo";
option java_outer_classname = "EchoServiceProto";

// Echo service definition
service EchoService {
  // Unary echo - echoes back the message
  rpc Echo(EchoRequest) returns (EchoResponse);
  
  // Server streaming echo - echoes back the message multiple times
  rpc ServerStreamingEcho(EchoRequest) returns (stream EchoResponse);
  
  // Client streaming echo - echoes back the concatenated messages
  rpc ClientStreamingEcho(stream EchoRequest) returns (EchoResponse);
  
  // Bidirectional streaming echo
  rpc BidirectionalStreamingEcho(stream EchoRequest) returns (stream EchoResponse);
}

// Echo request message
message EchoRequest {
  string message = 1;
  int32 request_id = 2;
}

// Echo response message
message EchoResponse {
  string message = 1;
  int32 request_id = 2;
  int64 timestamp = 3;
}
